Screen Wrapper: Adds basic screen wrapper
- Adds Toolbar Module
- Adds Landing Screen Module

--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,1 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+
+html
+  // Set font size to 10px for REM units
+  font-size: 10px
+
+body
+  font-size: 1.6rem
