--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -1,3 +1,11 @@
 <mat-toolbar>
-  <span>ZANESquad</span>
+  <span>
+    <a routerLink="/">ZANESquad</a>
+  </span>
+
+  <span class="fill-remaining-space"></span>
+  
+  <span>
+    <a routerLink="/coupons">Coupons</a>
+  </span>
 </mat-toolbar>
