--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -4,8 +4,10 @@
   </span>
 
   <span class="fill-remaining-space"></span>
-  
+
   <span>
     <a routerLink="/coupons">Coupons</a>
+  </span><span>
+    <a routerLink="/login">Login</a>
   </span>
 </mat-toolbar>
