Login: Adds login functionality and endpoint request

--- a/src/app/login-screen/login-screen.component.html
+++ b/src/app/login-screen/login-screen.component.html
@@ -13,7 +13,7 @@
   </mat-form-field>
   <div>
     <!-- [squadSubmitIfValid]="loginForm" (valid)="submitForm()"-->
-    <button mat-raised-button (click)="submitForm()">Login</button>
+    <button mat-raised-button [disabled]="loading" (click)="submitForm()">Login</button>
   </div>
 
 </form>
