--- a/src/app/coupons-screen/coupons-screen.component.html
+++ b/src/app/coupons-screen/coupons-screen.component.html
@@ -1,14 +1,17 @@
 <div *ngIf="loading">
   Loading coupons...
 </div>
-<div *ngIf="!loading">
-  <h1>Coupons:</h1>
-  <div *ngFor="let coupon of coupons">
-    {{coupon | json}}
-    <button (click)="editCoupon(coupon.guid)">Edit</button>
+<div *ngIf="!loading" class="coupons-wrapper">
+  <div class="headline">
+    <h1>Coupons:</h1>
+  </div>
+  <div class="content">
+    <div *ngFor="let coupon of coupons" class="coupon-container">
+      <zanesquad-coupon-card [coupon]="coupon" (editCoupon)="editCoupon()"></zanesquad-coupon-card>
+    </div>
   </div>
 </div>
 
-<div>
+<div class="cta-section">
   <button mat-mini-fab color="primary" (click)="createNewCoupon()">&#43;</button>
 </div>
