Coupons: Adds Edit Coupon Screen
- Implements a hacky state manager

--- a/src/app/coupons-list-screen/coupons-list-screen.component.html
+++ b/src/app/coupons-list-screen/coupons-list-screen.component.html
@@ -7,7 +7,7 @@
   </div>
   <div class="content">
     <div *ngFor="let coupon of coupons" class="coupon-container">
-      <zanesquad-coupon-card [coupon]="coupon" (editCoupon)="editCoupon()"></zanesquad-coupon-card>
+      <zanesquad-coupon-card [coupon]="coupon" (editCoupon)="editCoupon($event)"></zanesquad-coupon-card>
     </div>
   </div>
 </div>
