--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -6,8 +6,12 @@
   <span class="fill-remaining-space"></span>
 
   <span>
+    <a routerLink="/companies">Companies</a>
+  </span>
+  <span>
     <a routerLink="/coupons">Coupons</a>
-  </span><span>
+  </span>
+  <span>
     <a routerLink="/login">Login</a>
   </span>
 </mat-toolbar>
