--- a/src/app/coupons-list-screen/coupons-list-screen.component.sass
+++ b/src/app/coupons-list-screen/coupons-list-screen.component.sass
@@ -1,10 +1,13 @@
 .content
   display: flex
-  justify-content: space-between
+  justify-content: start
+  flex-wrap: wrap
 
 .coupon-container
-  width: 33%
   margin: 0 1rem
+  margin-bottom: 1rem
+  flex: 1 1 31%
+  flex-grow: 0
 
 .cta-section
   margin-top: 1rem
