Friend Requests: Adds Friends Screen

--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -12,6 +12,9 @@
     <a routerLink="/coupons">Coupons</a>
   </span>
   <span>
+    <a routerLink="/friends">Friends</a>
+  </span>
+  <span>
     <a routerLink="/login">Login</a>
   </span>
 </mat-toolbar>
